Added import Fix SCSS imports to properly apply base stylespaths to
Added missing @use statements in SCSS files and style imports in JavaScript files to make sure base styles  are always applied. This fixes problems where some components were missing styles. Now all feature files correctly include the shared base styles.

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -6,10 +6,11 @@
 @use "features/booking-engine/paymentConfirmPage.scss";
 @use "features/booking-engine/overlay.scss";
 //Base
-@use "features/base/header";
-@use "features/base/footer";
-@use "features/base/menubar";
-@use "features/base/searchbar";
+@use "features/base/header.scss";
+@use "features/base/footer.scss";
+@use "features/base/menubar.scss";
+@use "features/base/navbar.scss";
+@use "features/base/searchbar.scss";
 //Auth
 @use "features/auth/login.scss";
 @use "features/auth/register.scss";
