test for searchbar.scss
The conflict cannot be found, making another pr to see if the conflict will go.

--- a/web/src/styles/sass/features/base/SearchBar.scss
+++ b/web/src/styles/sass/features/base/SearchBar.scss
@@ -47,7 +47,7 @@ $primary-domits-color: #0d9813;
   height: 3.43rem;
   background-color: white;
 
-  >div {
+  div {
     position: relative;
     &::before {
       position: absolute;
