MenuBar and SearchBar bug fixed
Fixed the problem with file names not matching. The SCSS files now have the right names, and everything works again.

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -8,9 +8,9 @@
 //Base
 @use "features/base/header.scss";
 @use "features/base/footer.scss";
-@use "features/base/menubar.scss";
+@use "features/base/MenuBar.scss";
 @use "features/base/navbar.scss";
-@use "features/base/searchbar.scss";
+@use "features/base/SearchBar.scss";
 //Auth
 @use "features/auth/login.scss";
 @use "features/auth/register.scss";
