Removed all imports in .js files
Removed all the import paths for better use

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -18,6 +18,12 @@
 //pages
 //careers
 @use "pages/careers/careers.scss";
+@use "pages/careers/jobDetails.scss";
+
+//contact
+@use "pages/contact/contact.scss";
+
+
 
 //GuestDashboard
 @use "features/guestdashboard/guestDashboard.scss";
