--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -2,6 +2,7 @@
 //Booking-engine
 @use "features/booking-engine/imagegallery.scss";
 @use "features/booking-engine/listingDetails.scss";
+@use "features/booking-engine/listing.scss";
 @use "features/booking-engine/bookingoverview.scss";
 @use "features/booking-engine/paymentConfirmPage.scss";
 @use "features/booking-engine/overlay.scss";
