--- a/frontend/web/src/styles/sass/features/booking-engine/listingDetails.scss
+++ b/frontend/web/src/styles/sass/features/booking-engine/listingDetails.scss
@@ -131,6 +131,7 @@
         .collapsed {
           display: -webkit-box;
           -webkit-line-clamp: 3;
+           line-clamp: 3;
           -webkit-box-orient: vertical;
           max-height: 4.5em;
         }
